Fix footer alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -98,6 +98,6 @@ footer {
   }
 
   #main-footer .text-right {
-    text-align: left;
+    text-align: left !important;
   }
 }
